# obs-wincapture

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
CI/include/: build_support_windows.ps1
CI/windows/: 01_install_dependencies.ps1  02_build_obs.ps1
cmake/Modules/: CompilerConfig.cmake  ObsDefaults_Windows.cmake
plugins/: CMakeLists.txt
plugins/win-capture/: CMakeLists.txt  game-capture.c  graphics-hook-info.h
plugins/win-capture/get-graphics-offsets/: CMakeLists.txt  get-graphics-offsets.c  get-graphics-offsets.h
plugins/win-capture/graphics-hook/: CMakeLists.txt  dxgi-capture.cpp  graphics-hook.c  graphics-hook.h  vulkan-capture.c
